Fix crews panel link

--- a/staticfiles/airlines-static/crews-panel.html
+++ b/staticfiles/airlines-static/crews-panel.html
@@ -80,7 +80,7 @@
   
   
     <li class="active">
-      <a href="/airlines/crews">Crews</a>
+      <a href="/airlines/crews-panel">Crews</a>
     </li>
   
   
